--- a/CapyGamesA/src/app/modules/Customer/review/pages/main-review/main-review.component.html
+++ b/CapyGamesA/src/app/modules/Customer/review/pages/main-review/main-review.component.html
@@ -1,36 +1,5 @@
 <mat-card class="mt-5 mb-5">
   <mat-card-header class="row">
-
-    <mat-card-content>
-      <table
-        class="col-12"
-        matSort
-        (matSortChange)="announceSortChange($event)">
-
-        <ng-container matColumnDef="#">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
-          <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
-        </ng-container>
-        <ng-container matColumnDef="review_title">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Titulo</th>
-          <td mat-cell *matCellDef="let element">{{ element.review_title }}</td>
-        </ng-container>
-        <ng-container matColumnDef="review_description">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-          <td mat-cell *matCellDef="let element">{{ element.review_description }}</td>
-        </ng-container>
-        <ng-container matColumnDef="review_date">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>date</th>
-          <td mat-cell *matCellDef="let element">{{ element.review_date | date: "dd-MM-yyyy"}}</td>
-        </ng-container>
-        <ng-container matColumnDef="review_rating">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>rating</th>
-          <td mat-cell *matCellDef="let element">{{ element.review_rating }}</td>
-        </ng-container>
-
-      </table>
-    </mat-card-content>
-
     <mat-card class="mt-5 mb-5">
     <div class="col">
       <mat-card-title>Agregue su comentario</mat-card-title>
@@ -48,5 +17,45 @@
     </div>
     </mat-card>
   </mat-card-header>
+    <mat-card-content>
+      <table
+        class="col-12"
+        mat-table
+        [dataSource]="reviews"
+        matSort
+        (matSortChange)="announceSortChange($event)">
 
+        <ng-container matColumnDef="#">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
+          <td mat-cell *matCellDef="let element; let i = index">{{(i + 1)}}</td>
+        </ng-container>
+        <ng-container matColumnDef="review_title">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Titulo</th>
+          <td mat-cell *matCellDef="let element">{{ element.review_title }}</td>
+        </ng-container>
+        <ng-container matColumnDef="review_description">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+          <td mat-cell *matCellDef="let element">{{ element.review_description }}</td>
+        </ng-container>
+        <ng-container matColumnDef="review_date">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>date</th>
+          <td mat-cell *matCellDef="let element">{{ element.review_date | date: "dd-MM-yyyy"}}</td>
+        </ng-container>
+        <ng-container matColumnDef="review_rating">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>rating</th>
+          <td mat-cell *matCellDef="let element">{{ element.review_rating }}</td>
+        </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns" ></tr>
+      </table>
+      <mat-paginator>
+        [pageSizeOptions]="[5,10,20]"
+        [pageSize]="5"
+        [length]="5"
+        #paginationRef
+        showFristLastButtons
+        arial-label="Select page of periodic elements"
+        >
+        </mat-paginator>
+    </mat-card-content>
 </mat-card>
