funcional register, cart

--- a/CapyGamesA/src/app/modules/Customer/auth/pages/signup/signup.component.html
+++ b/CapyGamesA/src/app/modules/Customer/auth/pages/signup/signup.component.html
@@ -34,7 +34,7 @@
                   placeholder="Full Name"
                 />
                 <mat-error *ngIf="customer_name.invalid">
-                  <span *ngIf="customer_email.errors?.['required']"
+                  <span *ngIf="customer_name.errors?.['required']"
                     >Campo Obligatorio</span
                   >
                 </mat-error>
