--- a/CapyGamesA/src/app/modules/Customer/review/pages/main-review/main-review.component.html
+++ b/CapyGamesA/src/app/modules/Customer/review/pages/main-review/main-review.component.html
@@ -1,8 +1,8 @@
 <mat-card class="mt-5 mb-5">
   <mat-card-header class="row">
     <mat-card class="mt-5 mb-5">
-    <div class="col">
-      <mat-card-title>Agregue su comentario</mat-card-title>
+    <div id="divTitle" class="col">
+      <mat-card-title id="titleReview">Agregue su comentario</mat-card-title>
       <br>
     </div>
     <div class="col text-end">
