--- a/CapyGamesA/src/app/modules/Customer/cart/pages/main-cart/main-cart.component.css
+++ b/CapyGamesA/src/app/modules/Customer/cart/pages/main-cart/main-cart.component.css
@@ -2,6 +2,22 @@
 
 #titleCart {
     font-family: 'Press Start 2P', cursive;
-    font-size: 20px;
+    font-size: 30px;
     text-align: center;
+}
+
+#tableContent {
+    margin-left: 120px;
+}
+
+#text-title {
+    font-size: 20px;
+}
+
+#text-content {
+    font-size: 20px;
+}
+
+#btnPay {
+    margin-top: 40px;
 }
